# SCALING-LONG-INPUT-LONG-OUTPUT-LLM-INFERENCE-FOR-CLINICAL-SOAP

./: .env.example  .gitignore  BENCHMARKING.md  EVALUATION.md  GITHUB_UPLOAD_CHECKLIST.md  README.md  README_EXPERIMENTS.md  REPLICATION.md  RUN_SAFE.md  pyproject.toml  requirements-cluster-lite.txt  requirements-lite.txt  requirements.txt
configs/: base.yaml  chunked_baseline.yaml  naive_baseline.yaml  naive_baseline_8bit.yaml  naive_baseline_benchmark.yaml  prefill_two_stage_long_context.yaml  proposed_system.yaml  proposed_system_fp16.yaml  smoke_chunked.yaml  smoke_naive.yaml  systems_benchmark.yaml  systems_benchmark_batch4_pilot.yaml  systems_benchmark_context_sweep_1024.yaml  systems_benchmark_context_sweep_2048.yaml  systems_benchmark_context_sweep_4096.yaml  systems_benchmark_context_sweep_512.yaml  systems_benchmark_context_sweep_8192.yaml  systems_benchmark_context_sweep_base.yaml  systems_benchmark_decode_sweep_16_128.yaml  systems_benchmark_decode_sweep_16_16.yaml  systems_benchmark_decode_sweep_16_256.yaml  systems_benchmark_decode_sweep_16_32.yaml  systems_benchmark_decode_sweep_16_64.yaml  systems_benchmark_decode_sweep_32_128.yaml  systems_benchmark_decode_sweep_32_64.yaml  systems_benchmark_decode_sweep_base.yaml  systems_benchmark_llama_local.yaml  systems_benchmark_long_context_compact_prompt.yaml  systems_benchmark_long_context_pilot.yaml  systems_benchmark_pilot.yaml  systems_benchmark_serving_stack_comparison.yaml  systems_benchmark_serving_stack_long_context.yaml
reference_outputs/: README.md
scripts/: analyze_prefill_prompt_compression.py  (+22 more)
(+46 files in other folders)
